// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BookTextArea/> renders "Loading..." correctly when isLoadingBook 1`] = `
<div>
  Loading...
</div>
`;

exports[`<BookTextArea/> renders book content correctly when book loaded 1`] = `
<div>
  <div
    dangerouslySetInnerHTML={
      {
        "__html": "this is chapter 1",
      }
    }
    id="ch1"
  />
  <div
    dangerouslySetInnerHTML={
      {
        "__html": "this is chapter 2",
      }
    }
    id="ch2"
  />
</div>
`;

exports[`<BookTextArea/> renders to "No book chosen yet" when no book loaded yet 1`] = `
<div>
  No book chosen yet
</div>
`;
